# legal-contract-extractor

./: .gitignore  Dockerfile  README.md  annotate.py  cuadtojson.py  docker-compose.yml  generate_contracts.py  pyproject.toml  requirements.txt  run.py  split_data.py
app/: main.py
app/routes/: extraction.py  health.py
app/schemas/: extraction.py
app/services/: extraction_service.py  ner_service.py  postprocessor.py  text_cleaner.py
app/utils/: logger.py  pdf_utils.py
config/: config.yaml  settings.py
data/annotations/: sample_annotations.jsonl  test.jsonl  val.jsonl
ocr/: ocr_pipeline.py
tests/: test_api.py  test_pipeline.py
training/: evaluate.py  train.py
